@@ -110,6 +110,9 @@ Collection of variables used for setting the language that will be used on the A
       <language name="en-US" displayName="English (United States)" iSOTwoLetterCode="en" />
 	  <language name="nl-NL" displayName="Dutch (Netherlands)" iSOTwoLetterCode="nl" default="true" />
     </languagesList>
+    <masterPageLocationsList>
+      <masterPageLocation id="mplid1" area="PublicOrder" controller="PublicOrder" view="Norid" location="Areas\Empty" />
+    </masterPageLocationsList>
     <globalSettingsList>
       <cookieEncryptionCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName" findValue="*.testenv.ovh42.atomiademo.com" />
       <globalSetting name="javascriptMinifier" value="false" />
@@ -182,6 +185,12 @@ Collection of variables used for setting the language that will be used on the A
             <routeDefaultsList>
               <routeDefault name="controller" value="PublicOrder" />
               <routeDefault name="action" value="Select" />
+            </routeDefaultsList>
+          </route>
+          <route name="Norid" url="Norid" controllerNamespace="Atomia.Web.Plugin.PublicOrder.Controllers" id="6236620">
+            <routeDefaultsList>
+              <routeDefault name="controller" value="PublicOrder" />
+              <routeDefault name="action" value="Norid" />
             </routeDefaultsList>
           </route>
           <route name="Thankyou" url="Thankyou" controllerNamespace="Atomia.Web.Plugin.PublicOrder.Controllers" id="456584">
